Closed Bug 1940176 Opened 1 year ago Closed 1 year ago

Perma [tier 2] testBufferAllocator_stress | D:/task_173620039705312/src/js/src/jsapi-tests/testGCAllocator.cpp:679:CHECK failed: liveAllocs[index]

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
136 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox134 --- unaffected
firefox135 --- unaffected
firefox136 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jonco)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: nfay [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=488958909&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/HJRNgyMZStilyNfVRMuDnA/runs/0/artifacts/public/logs/live_backing.log


[task 2025-01-06T22:23:21.123Z] TEST-PASS | testGCCellPtr | ok
[task 2025-01-06T22:23:21.123Z] testBufferAllocator_stress
[task 2025-01-06T22:23:21.138Z] heap == 49152, malloc == 1868
[task 2025-01-06T22:23:21.643Z] D:/task_173620039705312/src/js/src/jsapi-tests/testGCAllocator.cpp:679:CHECK failed: liveAllocs[index]
[task 2025-01-06T22:23:21.940Z] TEST-UNEXPECTED-FAIL | testBufferAllocator_stress | D:/task_173620039705312/src/js/src/jsapi-tests/testGCAllocator.cpp:679:CHECK failed: liveAllocs[index]
[task 2025-01-06T22:23:21.940Z] testBufferAllocator_predicatesOnOtherAllocs
[task 2025-01-06T22:23:21.961Z] TEST-PASS | testBufferAllocator_predicatesOnOtherAllocs | ok
[task 2025-01-06T22:23:21.961Z] testBufferAllocator_realloc
[task 2025-01-06T22:23:21.987Z] TEST-PASS | testBufferAllocator_realloc | ok
[task 2025-01-06T22:23:21.987Z] testBufferAllocator_API
[task 2025-01-06T22:23:22.003Z]       16 ->       24       8 (33.3%)
[task 2025-01-06T22:23:22.005Z]       17 ->       24       7 (29.2%)
[task 2025-01-06T22:23:22.006Z]       31 ->       56      25 (44.6%)
[task 2025-01-06T22:23:22.007Z]       32 ->       56      24 (42.9%)
[task 2025-01-06T22:23:22.007Z]      100 ->      120      20 (16.7%)
[task 2025-01-06T22:23:22.008Z]      200 ->      248      48 (19.4%)
[task 2025-01-06T22:23:22.008Z]      240 ->      248       8 (3.2%)
[task 2025-01-06T22:23:22.009Z]      256 ->      504     248 (49.2%)
[task 2025-01-06T22:23:22.009Z]     1000 ->     1016      16 (1.6%)
[task 2025-01-06T22:23:22.010Z]     4096 ->     8184    4088 (50.0%)
[task 2025-01-06T22:23:22.010Z]     5000 ->     8184    3184 (38.9%)
[task 2025-01-06T22:23:22.011Z]    16384 ->    32760   16376 (50.0%)
[task 2025-01-06T22:23:22.011Z]   102400 ->   131064   28664 (21.9%)
[task 2025-01-06T22:23:22.012Z]   261120 ->   262136    1016 (0.4%)
[task 2025-01-06T22:23:22.013Z]   262144 ->   524280  262136 (50.0%)
[task 2025-01-06T22:23:22.014Z]   614400 ->   618464    4064 (0.7%)
[task 2025-01-06T22:23:22.014Z]  3145728 ->  3149792    4064 (0.1%)
[task 2025-01-06T22:23:22.016Z] TEST-PASS | testBufferAllocator_API | ok
[task 2025-01-06T22:23:22.016Z] testGCAllocator
[task 2025-01-06T22:23:22.027Z] TEST-PASS | testGCAllocator | ok

:jonco, since you are the author of the regressor, bug 1911537, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(jcoppeard)
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)

Because we allocate up to 500 buffers of random size of up to 4MB we can run
out of memory on some platforms. This patch makes the test tolerate this.

Set release status flags based on info from the regressing bug 1911537

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c117f0b3d6d0 Allow OOM in buffer allocator stress test r=sfink
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: