Bug 1940176 - Allow OOM in buffer allocator stress test r=sfink

Because we allocate up to 500 buffers of random size of up to 4MB we can run
out of memory on some platforms. This patch makes the test tolerate this.

Differential Revision: https://phabricator.services.mozilla.com/D233351